text alignment issue
simplify css

update backstop

address automated code review

--- a/apps/site/web/static/css/_stops.scss
+++ b/apps/site/web/static/css/_stops.scss
@@ -1,9 +1,7 @@
 .station-mode-description {
-  display: inline-block;
   font-size: 1rem;
   font-weight: normal;
-  padding-top: .5rem;
-  vertical-align: top;
+  vertical-align: middle;
 
   @include media-breakpoint-down(sm) {
     display: none;
@@ -12,6 +10,11 @@
 
 .station-mode-icon {
   white-space: nowrap;
+
+  svg {
+    margin-top: 0;
+    vertical-align: middle;
+  }
 }
 
 .mode-section {
